# ebit-cpp-server

./: .gitignore  CMakeLists.txt  Makefile  README.org
src/: CMakeLists.txt  capi.cpp  capi.h  ebit-ode-message.pb.h  integrate.h  main.cpp  message.cpp  message.h  ode.cpp  ode.h  solver.cpp  solver.h
test/: CMakeLists.txt  FooTest.cpp  Makefile  cmake_install.cmake
testdata/: simple_test.kairos  simple_test_out.kairos
